Finalizando a aula de hoje

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <p>Obigado pela ajuda primos! Amos vcs</p>
     <h2>Very Nice</h2>
     <h3>Oh yeah man</h3>
     <p>Isso é um parágrafo!</p>
+
 </body>
 </html>
