--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menota Leticia</title>
+    <title>Login</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>Very Nice</h2>
-    <h3>Oh yeah man</h3>
+    <h1>Login</h1>
 </body>
 </html>
