add button senha

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Login</h1>
     <p>Digite o seu email:</p>
     <input type="email"/>
-    
+    <p>Digite sua senha:</p>
+    <input type="password"/>
+    <button type="button">Enter</button>
 </body>
 </html>
